kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service-nginx
  labels:
    name: example-service-nginx
spec:
  type: ClusterIP
  ports:
  - name: http-nginx
    port: 80
  selector:
    name: example-service-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  labels:
    name: example-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9000
  selector:
    name: example-service
