kubernetes/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: example-service-gateway
  labels:
    name: example-service
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-service-nginx
  labels:
    name: example-service-nginx
spec:
  hosts:
  - "*"
  gateways:
  - example-service-gateway
  http:
  - match:
    - uri:
        prefix: "/example"
    route:
    - destination:
        host: example-service-nginx
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-service
  labels:
    name: example-service
spec:
  hosts:
  - example-service
  http:
  - route:
    - destination:
        host: example-service
        subset: release
      weight: 50
    - destination:
        host: example-service
        subset: canary
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: example-service-dr
spec:
  host: example-service
  subsets:
  - name: release
    labels:
      track: release
  - name: canary
    labels:
      track: canary
